<resources>
    <string name="app_name" translatable="false">StockField</string>
    <string name="api_base" translatable="false">https://stock-field.com/api/</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3621285827573653~2548638804</string>
    <string name="admob_home_banner_unit_id" translatable="false">ca-app-pub-3621285827573653/5967001458</string>
    <string name="admob_open_unit_id" translatable="false">ca-app-pub-3621285827573653/9980314370</string>
    <string name="admob_close_unit_id" translatable="false">ca-app-pub-3621285827573653/8424524271</string>
    <string name="calculator_url" translatable="false">https://stock-field.com/stock_simulator?item=tsla&amp;value=30&amp;start_day=2020-01-13&amp;last_day=2020-11-09</string>

    <string name="closeApp">Exit App</string>
    <string name="returnToApp">Back</string>

    <string name="checkingServerState">Checking Server</string>
    <string name="loadingData">Fetching Data</string>

    <string name="confirm">Confirm</string>
    <string name="commonErrorMessage">Unknown Error occurred.</string>

    <string name="rankTitle">Rank</string>
    <string name="tickerTitle">Ticker</string>
    <string name="sharesTitle">Shares</string>
    <string name="weightTitle">Weight</string>
    <string name="closingPriceTitle">ClosingPrice</string>
    <string name="dateTitle">Date</string>

    <string name="numberWithDollar" translatable="false">$ %1$s</string>
    <string name="numberWithPlus" translatable="false">+%1$s</string>
    <string name="numberWithPercent" translatable="false">%1$s %%</string>
    <string name="brand_new" translatable="false">NEW</string>
    <string name="closingPriceIncreaseFormat" translatable="false">+%1$s(%2$s%%)</string>
    <string name="closingPriceDecreaseFormat" translatable="false">%1$s(%2$s%%)</string>
    <string name="dateFormat">* %1$s</string>
    <string name="filter" translatable="false">filter</string>

    <string name="moveToBack" translatable="false">move to back</string>
    <string name="highestPrice_52">52 Week Highest</string>
    <string name="lowestPrice_52">52 Week Lowest</string>
    <string name="sector">Sector</string>
    <string name="industry">Industry</string>
    <string name="totalPrice">Market Cap</string>
    <string name="PER" translatable="false">PER</string>
    <string name="ROE" translatable="false">ROE</string>
    <string name="PBR" translatable="false">PBR</string>

    <string name="basicInfo">Summary</string>
    <string name="fundCollection">Other Funds</string>

    <string name="failToLoading">Failed to fetch data.</string>
    <string name="etfHoldingsInfoFormat">In Stockfield, %1$d of ETFs have the stock.</string>

    <string name="fundImageDescription" translatable="false">Fund Image</string>
    <string name="more">More</string>
    <string name="version">Version</string>
    <string name="opensource">OpenSource</string>
    <string name="check_calculator">👆Check out a rate of return\nif did Dollar-Cost-Averaging(DCA)</string>
</resources>