<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tableTitleView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/rankField"
        style="@style/RankCell.Title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/rankTitle"
        app:layout_constraintEnd_toStartOf="@id/tickerField"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tickerField"
        style="@style/TickerCell.Title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tickerTitle"
        app:layout_constraintEnd_toStartOf="@id/sharesField"
        app:layout_constraintStart_toEndOf="@id/rankField" />

    <TextView
        android:id="@+id/sharesField"
        style="@style/SharesCell.Title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/sharesTitle"
        app:layout_constraintEnd_toStartOf="@id/weightField"
        app:layout_constraintStart_toEndOf="@id/tickerField" />

    <TextView
        android:id="@+id/weightField"
        style="@style/WeightCell.Title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/weightTitle"
        app:layout_constraintEnd_toStartOf="@id/closingPriceField"
        app:layout_constraintStart_toEndOf="@id/sharesField" />

    <TextView
        android:id="@+id/closingPriceField"
        style="@style/ClosingPriceCell.Title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/closingPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weightField" />
</androidx.constraintlayout.widget.ConstraintLayout>